--- a/weather-app/src/App.css
+++ b/weather-app/src/App.css
@@ -4,6 +4,11 @@
 }
 
 @font-face {
+    font-family: "Nord Bold";
+    src: url("./fonts/Nord Bold.otf") format("opentype");
+}
+
+@font-face {
     font-family: "Millennium-Round";
     src: url("./fonts/Millennium-Round.otf") format("opentype");
 }
@@ -22,16 +27,12 @@ body {
 body {
 	background-color: #eeebe2;
 	min-height: 100%;
-	font-family: 'Nord Medium';
+	font-family: 'Nord Bold';
 }
 
 .header {
 display: flex;
 justify-content: space-around;
-}
-
-.App {
-/*	border: dashed 7px #e9c2a3;*/
 }
 
 .title, .about {
@@ -183,9 +184,12 @@ justify-content: space-around;
 	width: 500px;
 	font-size: 30px;
 	letter-spacing: 1px;
-	font-family: 'Nord Medium';
 	background-color: #f7f6f2;
 	margin-top: -20px;
+}
+
+.temperature {
+	margin-right: 100px;
 }
 
 .description img {
@@ -194,13 +198,15 @@ justify-content: space-around;
 }
 
 .description p {
-	font-size: 20px;
+	font-size: 15px;
+	font-family: 'Nord Bold';
+	letter-spacing: 5px;
 }
 
 .detail {
 	display: inline-block;
 	margin: 20px 5px 5px 0px;
-	font-size: 20px;
+	font-size: 15px;
 }
 
 .view-body-top {
