--- a/src/App.css
+++ b/src/App.css
@@ -155,7 +155,7 @@ justify-content: space-around;
     bottom: 0;
     left: 0;
     width: 100%;
-    height: 200px;
+    height: 100px;
     background-color: #5b5776;
     z-index: -1;
     border-top: 10px solid #ffffff;
@@ -281,12 +281,17 @@ justify-content: space-around;
 }
 
 @media screen and (min-width: 1080px) {
-	.header {
-		margin-bottom: 100px;
-	}
 
 	.about {
 		font-size: 23px;
+	}
+
+	.city-container {
+		margin-bottom: 30px;
+	}
+
+	.close {
+		margin-left: 30px;
 	}
 }
 
