--- a/src/App.css
+++ b/src/App.css
@@ -253,6 +253,10 @@ justify-content: space-around;
 .city-container  {
 	flex-wrap: wrap;
 }
+
+.about {
+	font-size: 25px;
+}
 }
 
 @media screen and (max-width: 600px) {
