--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,7 @@ body {
 	background-color: #eeebe2;
 	min-height: 100%;
 	font-family: 'Nord Bold';
+	text-transform: uppercase;
 }
 
 .header {
@@ -36,7 +37,6 @@ justify-content: space-around;
 }
 
 .title, .about {
-	text-transform: uppercase;
 	letter-spacing: 5px;
 	font-size: 70px;
 	color: #5b5776;
@@ -148,6 +148,10 @@ justify-content: space-around;
 	background-color: #ffffff;
 	margin-top: 0px;
 	border: 3px solid #E7B297;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-size: 20px;
 }
 
 .view-background {
@@ -164,6 +168,8 @@ justify-content: space-around;
 .view-header {
 	text-align: center;
 	color: #ffffff;
+	background-color: #E7B297;
+	border: 3px solid #ffffff;
 }
 
 .view-header, .view-body {
@@ -173,7 +179,6 @@ justify-content: space-around;
 	width: 400px;
 	height: 100px;
 	margin: 30px;
-	text-transform: uppercase;
 	letter-spacing: 8px;
 	font-size: 20px;
 	z-index: 1;
@@ -218,34 +223,23 @@ justify-content: space-around;
 	font-size: 30px;
 }
 
-.close {
-  position: absolute;
-  right: 32px;
-  top: 32px;
-  width: 100px;
-  height: 32px;
-  opacity: 0.5;
+/* Links */
+
+a:link {
+	color: #5b5776;
+	text-decoration: none;
 }
 
-.close:hover {
-  opacity: 1;
+a:visited {
+	color: #5b5776;
 }
 
-.close:before, .close:after {
-  position: absolute;
-  left: 15px;
-  content: '';
-  height: 50px;
-  width: 15px;
-  background-color: #5b5776;
+a:hover {
+    color: #E7B297;
 }
 
-.close:before {
-  transform: rotate(45deg);
-}
-
-.close:after {
-  transform: rotate(-45deg);
+a:hover {
+    color: #E7B297;
 }
 
 @media screen and (min-width: 768px) and (max-width: 1024px) {
@@ -257,6 +251,7 @@ justify-content: space-around;
 .about {
 	font-size: 25px;
 }
+
 }
 
 @media screen and (max-width: 600px) {
@@ -294,9 +289,6 @@ justify-content: space-around;
 		margin-bottom: 30px;
 	}
 
-	.close {
-		position: absolute;
-	}
 }
 
 @media screen and (min-width: 1600px) {
@@ -310,10 +302,5 @@ justify-content: space-around;
 	}
 }
 
-@media screen and (min-height: 200px) {
-	.view-background {
-	 display: none;
-	}
 
-}
 
